--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Welcome To ProShop</title>
+    <p>Welcome To ProShop</p>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
